subindo projeto e pasta de algoritmo de dados

--- a/script.ipynb
+++ b/script.ipynb
@@ -23,11 +23,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "066c0854",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say_hello(n):\n",
+    "    for i in range(n):\n",
+    "        print(\"Hello!\")\n",
+    "\n",
+    "say_hello(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "1d38f4fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def daysBetween_dates(year1, month1, day1, year2, month2, day2):\n",
+    "    days = 0\n",
+    "    while dateIsBefore_(year1, month1, day1, year2, month2, day2):\n",
+    "        days += 1\n",
+    "        year1, month1, day1 = nextDay(year1, month1, day1)\n",
+    "    return days"
+   ]
   },
   {
    "cell_type": "code",
